# cl-book

./: .gitignore  .gitmodules  README.md  check.sh
apps/cl-lanexpr/: Cargo.toml  README.md
apps/cl-lanexpr/misc/: lanexpr_llvm_runtime.c
apps/cl-lanexpr/src/: main.rs
apps/cl-lanexpr/tests/: llvmbin.rs
apps/irint3a-utils/: Cargo.toml  README.md
apps/irint3a-utils/src/: main.rs
apps/irint3a-utils/tests/: interpreter.rs
apps/irintsm-utils/: Cargo.toml  README.md  binsearch.ir  calc.ir  cat.ir  out.ir
apps/irintsm-utils/src/: main.rs
apps/irintsm-utils/tests/: interpreter.rs
libs/lanexpr/: Cargo.toml  README.md
libs/lanexpr/src/: ast.rs  astcast.rs  bindapp.rs  bindbuilder.rs  bindfun.rs  bindscope.rs  bindvar.rs  defstable.rs  letype.rs  lib.rs  nativedefs.rs  parser.rs  type_dyn_try.rs  typecheck.rs  typeinfos.rs
libs/lanexpr/src/translater/: defslist.rs  irint3a.rs  irintsmtl.rs  llvmbin.rs  llvmtl.rs  mod.rs
libs/lanexpr/tests/algos1/: binsearch.c  binsearch.le  queuell.c  queuell.le  stack.c  stack.le  stackfixed.c  stackfixed.le  stackll.c  stackll.le  unionfind.c  unionfind.le
libs/lanexpr/tests/algos2/: 3wquicksort.c  3wquicksort.le  bumergesort.c  bumergesort.le  heap.c  heap.le  heapsort.c  heapsort.le  insertionsort.c  insertionsort.le  quicksort.c  quicksort.le  selectionsort.c  selectionsort.le  shellsort.c  shellsort.le  tdmergesort.c  tdmergesort.le
libs/lanexpr/tests/algos3/: bsttable.c  bsttable.le  hashtable.c  hashtable.le  lltable.c  lltable.le
libs/lanexpr/tests/basics/: calc.le  cat.c  cat.le  fact.c  fact.le  fibo.c  fibo.le  ivec.c  ivec.le  printer.c  printer.le
libs/lanexpr/tests/grammar/: def_fun.le  def_var.le  expr_add.le  expr_assign.le  expr_call1.le  expr_call2.le  expr_div.le  expr_eq.le  expr_gt.le  expr_if.le  expr_if_else.le  expr_let_empty.le  expr_list_two.le  expr_lt.le  expr_mod.le  (+4 more)
(+107 files in other folders)
