[package]
name = "cl-lanexpr"
version = "0.1.0"
authors = ["Steven Lariau <obs145628@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
lanexpr = { path = "../../libs/lanexpr/" }
irint3a = { path = "../../libs/irint3a/" }
irintsm = { path = "../../libs/irintsm/" }
