[package]
name = "irintsm-utils"
version = "0.1.0"
authors = ["Steven Lariau <obs145628@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
interp_irintsm = { path = "../../libs/interp_irintsm/" }
irintsm = { path = "../../libs/irintsm/" }
lanexpr = { path = "../../libs/lanexpr/" }
obtests = { path = "../../libs/obtests/" }