[package]
name = "lanexpr"
version = "0.1.0"
authors = ["Steven Lariau <obs145628@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
llvm-sys = "90.0.0"
clangutils = { path = "../clangutils/" }
oblexer = { path = "../oblexer/" }
obparser = { path = "../obparser/" }
obuid = { path = "../obuid/" }
irint3a = { path = "../irint3a/" }